--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ before_install: make clean
 install:
     - if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then make build36; fi
     - if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then make build37; fi
+    - pip install codecov
 script: make test
+after_success: codecov
