--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,16 @@ beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
 coverage==4.5.3
+entrypoints==0.3
+flake8==3.7.7
 idna==2.8
 lxml==4.3.3
+mccabe==0.6.1
 more-itertools==7.0.0
 pluggy==0.11.0
 py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pytest==4.4.1
 pytest-cov==2.7.1
 requests==2.21.0
