--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,11 @@ fail_under = 100
 
 [flake8]
 max-line-length = 119
+exclude =
+    .git,
+    .pytest_cache,
+    __pycache__,
+    *.pyc,
+    dist,
+    build,
+    env
