Configured branch coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,14 @@
+[coverage:run]
+branch = True
+source =
+    sec_edgar_downloader
+    tests
+
 [coverage:report]
+ignore_errors = True
 show_missing = True
-fail_under = 100
+precision = 2
+fail_under = 98
 
 [flake8]
 max-line-length = 119
