--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,7 +1,4 @@
 coverage:
-    status:
-        project:
-            default:
-                target: 100%
-                threshold: null
-                base: auto
+    precision: 2
+    round: down
+    range: "98...100"
