--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,4 +1,7 @@
 coverage:
-    precision: 2
-    round: down
-    range: "98...100"
+    status:
+        project:
+            default:
+                target: 100%
+                threshold: null
+                base: auto
