Rename internal variables and updated setup.py (#3)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
+[coverage:report]
+ignore_errors = True
+show_missing = True
+fail_under = 100
+
 [flake8]
 max-line-length = 119
+exclude =
+    .git,
+    .pytest_cache,
+    __pycache__,
+    *.pyc,
+    dist,
+    build,
+    env
