--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ dist: xenial
 python:
     - 3.6
     - 3.7
+    - 3.8
 before_install: make clean
 install:
     - if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then make build36; fi
     - if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then make build37; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == '3.8' ]]; then make build38; fi
     - pip install codecov
 script:
     - make lint
