--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 sudo: false
 language: python
+cache: pip
 dist: xenial
 python:
     - 3.6
     - 3.7
+    - "3.8-dev"
 before_install: make clean
 install:
-    - if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then make build36; fi
-    - if [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then make build37; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == "3.6" ]]; then make build36; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then make build37; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == "3.8-dev" ]]; then make build38; fi
     - pip install codecov
 script:
     - make lint
