--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,11 @@
+[coverage:run]
+branch = True
+
 [coverage:report]
 ignore_errors = True
 show_missing = True
 fail_under = 100
 
 [flake8]
-max-line-length = 119
-exclude =
-    .git,
-    .pytest_cache,
-    __pycache__,
-    *.pyc,
-    dist,
-    build,
-    env
+max-line-length = 120
+ignore = E203,W503
