--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,10 @@
 [coverage:run]
 branch = True
+source =
+    sec_edgar_downloader
+    tests
 
 [coverage:report]
-ignore_errors = True
 show_missing = True
 fail_under = 100
 
