Tweaked branch coverage metrics

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,5 @@
 [tool:pytest]
-addopts = -v --cov=sec_edgar_downloader tests
-
-[coverage:run]
-branch = True
-source =
-    sec_edgar_downloader
-    tests
-
-[coverage:report]
-show_missing = True
-fail_under = 100
+addopts = -v --cov-branch --cov=sec_edgar_downloader tests --cov-fail-under=100 --cov-report=term-missing
 
 [flake8]
 max-line-length = 120
