Formatted code style and added branch coverage (#7)
* Reformatted code using black and tweaked flake8 linting

* Tweaked badges in README

* Added branch coverage metrics

* Cleaned up requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,6 @@
-[coverage:report]
-ignore_errors = True
-show_missing = True
-fail_under = 100
+[tool:pytest]
+addopts = -v --cov-branch --cov=sec_edgar_downloader tests --cov-fail-under=100 --cov-report=term-missing
 
 [flake8]
-max-line-length = 119
-exclude =
-    .git,
-    .pytest_cache,
-    __pycache__,
-    *.pyc,
-    dist,
-    build,
-    env
+max-line-length = 120
+ignore = E203,W503
