Remove tests from pytest cov

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader tests --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
 
 [flake8]
 max-line-length = 120
