--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: python
 dist: xenial
-python:
-    - 3.6
-    - 3.7
-    - 3.8-dev
+matrix:
+    include:
+        - python: 3.6
+        - python: 3.7
+        - python: 3.8-dev
+        - name: "Linting"
+          python: 3.7
+          env: TARGET=lint-ci
+          cache:
+              directories:
+                  - $HOME/.cache/pre-commit
+    allow_failures:
+        - python: 3.8-dev
+before_install: pip install -U codecov
 install:
     - if [[ $TRAVIS_PYTHON_VERSION == "3.6" ]]; then make build36; fi
     - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then make build37; fi
     - if [[ $TRAVIS_PYTHON_VERSION == "3.8-dev" ]]; then make build38; fi
-    - pip install -U codecov
-script:
-    - make flake8
-    - make test
+script: make "${TARGET:-test}"
 after_success: codecov
