--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 beautifulsoup4==4.7.1
 lxml==4.3.3
-requests==2.22.0
+pre-commit==1.16.1
 pytest==4.5.0
 pytest-cov==2.7.1
-flake8==3.7.7
+requests==2.22.0
