--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [tool:pytest]
 addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
 
+[tool:isort]
+known_third_party = bs4,pytest,requests,setuptools,utils
+
 [flake8]
-max-line-length = 120
-ignore = E203,W503
+ignore = E203,E501,W503
