--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,6 @@ addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-
 known_third_party = bs4,pytest,requests,setuptools,utils
 
 [flake8]
+max-line-length = 88
+select = C,E,F,W,B,B901,B902,B903
 ignore = E203,E501,W503
