Refactored handling of query strings to use urllib rather than f strings

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,5 @@ known_third_party = bs4,pytest,requests,setuptools,utils
 
 [flake8]
 max-line-length = 88
-select = C,E,F,W,B,B901,B902,B903
+select = C,E,F,W,B,B901,B902,B903,B950
 ignore = E203,E501,W503
