Revamped download process to parse download links using XML rather than DOM. Dropped bs4 as dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
 
 [tool:isort]
-known_third_party = bs4,pytest,requests,setuptools,utils
+known_third_party = lxml,pytest,requests,setuptools
 
 [flake8]
 max-line-length = 88
