--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,14 +11,14 @@ repos:
           - id: requirements-txt-fixer
           - id: fix-encoding-pragma
             args: [--remove]
-    - repo: https://github.com/asottile/seed-isort-config
-      rev: v1.9.0
-      hooks:
-          - id: seed-isort-config
-    - repo: https://github.com/pre-commit/mirrors-isort
-      rev: v4.3.20
-      hooks:
-          - id: isort
+    # - repo: https://github.com/asottile/seed-isort-config
+    #   rev: v1.9.0
+    #   hooks:
+    #       - id: seed-isort-config
+    # - repo: https://github.com/pre-commit/mirrors-isort
+    #   rev: v4.3.20
+    #   hooks:
+    #       - id: isort
     - repo: https://github.com/asottile/pyupgrade
       rev: v1.17.1
       hooks:
