--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,15 @@
 default_language_version:
     python: python3
 repos:
+    - repo: https://github.com/PyCQA/bandit
+      rev: 1.6.0
+      hooks:
+          - id: bandit
+            args: [-lll, --quiet, --exclude=tests/**]
+    - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+      sha: v1.1.0
+      hooks:
+          - id: python-safety-dependencies-check
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v2.2.3
       hooks:
@@ -11,14 +20,14 @@ repos:
           - id: requirements-txt-fixer
           - id: fix-encoding-pragma
             args: [--remove]
-    # - repo: https://github.com/asottile/seed-isort-config
-    #   rev: v1.9.0
-    #   hooks:
-    #       - id: seed-isort-config
-    # - repo: https://github.com/pre-commit/mirrors-isort
-    #   rev: v4.3.20
-    #   hooks:
-    #       - id: isort
+    - repo: https://github.com/asottile/seed-isort-config
+      rev: v1.9.0
+      hooks:
+          - id: seed-isort-config
+    - repo: https://github.com/pre-commit/mirrors-isort
+      rev: v4.3.20
+      hooks:
+          - id: isort
     - repo: https://github.com/asottile/pyupgrade
       rev: v1.17.1
       hooks:
