Dropped lxml dependency in favor of Python's built in xml library

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
 
 [tool:isort]
-known_third_party = lxml,pytest,requests,setuptools
+known_third_party = pytest,requests,setuptools
 
 [flake8]
 max-line-length = 88
