Added ability to exclude amends; refactored code to use lxml xpath expressions; added tests for date and amend control

--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,7 @@ select = C,E,F,W,B,B901,B902,B903,B950
 ignore = E203,E501,W503
 
 [isort]
-known_third_party = pytest,requests,setuptools
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+known_third_party = lxml,pytest,requests,setuptools
