--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
       rev: v4.3.20
       hooks:
           - id: isort
+            args: [--quiet]
     - repo: https://github.com/asottile/pyupgrade
       rev: v1.17.1
       hooks:
