Fixed __version__ issue and updated Travis to use Tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py36,py37,py38,lint
+envlist = py{36,37,38},lint
+skip_missing_interpreters = true
 
 [testenv]
 description = run the tests with pytest using {basepython}
@@ -8,20 +9,20 @@ commands =
     pytest {posargs}
     pre-commit install
 
-# tox -e lint -- --show-diff-on-failure
 [testenv:lint]
 description = lint files in current directory using {basepython}
 basepython = python3
 skip_install = true
 deps = pre-commit
-commands = pre-commit run --all-files {posargs}
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --cov-branch --cov=sec_edgar_downloader tests --cov-fail-under=100 --cov-report=term-missing
 
 [flake8]
 max-line-length = 88
-select = C,E,F,W,B,B901,B902,B903,B950
+select = C,E,F,W,B,B9
+per-file-ignores = sec_edgar_downloader/__init__.py:F401
 ignore = E203,E501,W503
 
 [isort]
