Added verbose flag for prints and improved amends tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,19 +5,19 @@ skip_missing_interpreters = true
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
-commands =
-    pytest {posargs}
-    pre-commit install
+commands = pytest {posargs}
 
 [testenv:lint]
 description = lint files in current directory using {basepython}
 basepython = python3
 skip_install = true
 deps = pre-commit
-commands = pre-commit run --all-files --show-diff-on-failure
+commands =
+    pre-commit install
+    pre-commit run --all-files --show-diff-on-failure
 
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader tests --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --nf --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
 
 [flake8]
 max-line-length = 88
