Added initial docs pass

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,11 +34,17 @@ repos:
       rev: v1.4.0
       hooks:
           - id: python-no-eval
+          - id: rst-backticks
     - repo: https://github.com/python/black
       rev: 19.3b0
       hooks:
           - id: black
             args: [--safe, --quiet, --target-version=py36]
+    - repo: https://github.com/asottile/blacken-docs
+      rev: v1.0.0
+      hooks:
+          - id: blacken-docs
+            additional_dependencies: [black==19.3b0]
     - repo: https://gitlab.com/pycqa/flake8
       rev: 3.7.7
       hooks:
