--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,10 @@
 default_language_version:
     python: python3
 repos:
+    - repo: meta
+      hooks:
+          - id: check-hooks-apply
+          - id: check-useless-excludes
     - repo: https://github.com/PyCQA/bandit
       rev: 1.6.0
       hooks:
@@ -18,6 +22,8 @@ repos:
           - id: requirements-txt-fixer
           - id: fix-encoding-pragma
             args: [--remove]
+          - id: trailing-whitespace
+            exclude: ^tests/_testing_data/
     - repo: https://github.com/asottile/seed-isort-config
       rev: v1.9.1
       hooks:
