--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,13 +9,17 @@ repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v2.2.3
       hooks:
-          - id: trailing-whitespace
+          - id: check-case-conflict
+          - id: check-docstring-first
+          - id: check-merge-conflict
           - id: end-of-file-fixer
           - id: check-yaml
           - id: debug-statements
           - id: requirements-txt-fixer
           - id: fix-encoding-pragma
             args: [--remove]
+          - id: trailing-whitespace
+            exclude: ^tests/_testing_data/
     - repo: https://github.com/asottile/seed-isort-config
       rev: v1.9.1
       hooks:
