--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,13 @@ max-line-length = 88
 select = C,E,F,W,B,B9
 per-file-ignores = sec_edgar_downloader/__init__.py:F401
 ignore = E203,E501,W503
+exclude =
+    .git,
+    __pycache__,
+    *.pyc,
+    docs/conf.py,
+    build,
+    dist
 
 [isort]
 line_length = 88
