--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
 language: python
-dist: xenial
+dist: bionic
 matrix:
     include:
-        - python: 3.6
+        - python: "3.6"
           env: TOXENV=py36
-        - python: 3.7
+        - python: "3.7"
           env: TOXENV=py37
-        - python: 3.8-dev
+        - python: "3.8-dev"
           env: TOXENV=py38
         - name: "Linting"
-          python: 3.7
+          python: "3.7"
           env: TOXENV=py37
           cache:
               directories:
                   - $HOME/.cache/pre-commit
-    allow_failures:
-        - python: 3.8-dev
-          env: TOXENV=py38
 install: pip install -U codecov tox
 script: tox
 after_success: codecov
