--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: python
 dist: bionic
 matrix:
     include:
-        - python: "3.6"
+        - name: "Python 3.6"
+          python: "3.6"
           env: TOXENV=py36
-        - python: "3.7"
+        - name: "Python 3.7"
+          python: "3.7"
           env: TOXENV=py37
-        - python: "3.8-dev"
+        - name: "Python 3.8"
+          python: "3.8-dev"
           env: TOXENV=py38
         - name: "Linting"
           python: "3.7"
