--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       hooks:
           - id: python-no-eval
           - id: rst-backticks
-    - repo: https://github.com/python/black
+    - repo: https://github.com/psf/black
       rev: 19.3b0
       hooks:
           - id: black
