--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
           - id: fix-encoding-pragma
             args: [--remove]
           - id: trailing-whitespace
-            exclude: ^tests/_testing_data/
+            exclude: ^tests/sample_filings/
     - repo: https://github.com/asottile/seed-isort-config
       rev: v1.9.4
       hooks:
