--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ matrix:
           env: TOXENV=py37
         - name: "Python 3.7 on macOS"
           os: osx
-          osx_image: xcode11
-          language: shell # 'language: python' is an error on Travis CI macOS
+          python: "3.7"
+          # osx_image: xcode11.3
+          # language: shell # 'language: python' is an error on Travis CI macOS
           env: TOXENV=py37
         - name: "Python 3.7 on Windows"
           os: windows
