Attempt at setting up GH actions

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,12 @@
 envlist = py{36,37,38},lint
 skip_missing_interpreters = true
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
