--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
       - name: Linting
-        env: "TOXENV=lint"
+        env:
+          TOXENV: lint
         run: tox
 
   Linux:
