--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
     pre-commit run --all-files --show-diff-on-failure
 
 [pytest]
-addopts = -v --nf --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --nf --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
 [flake8]
 max-line-length = 88
