Fully documented package

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38},lint
+envlist = py{36,37,38},lint,docs
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -43,3 +43,16 @@ line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
 known_third_party = lxml,pytest,requests,setuptools
+
+[testenv:docs]
+basepython = python3
+skip_install = true
+changedir = docs
+deps =
+    doc8
+    sphinx
+    lxml
+whitelist_externals = make
+commands =
+    doc8 index.rst ../README.rst --extension .rst --ignore D001
+    make html SPHINXOPTS="-W --keep-going"
