--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: tests
 
 on: [push, pull_request]
 
@@ -16,10 +16,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
-      - name: Linting
-        env:
-          TOXENV: lint
-        run: tox
+      - name: Linting code
+        run: tox -e lint
+      - name: Linting docs
+        run: tox -e docs
 
   Linux:
     needs: Linting
