--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,7 @@ repos:
     rev: v1.4.0
     hooks:
       - id: blacken-docs
+        exclude: ^CHANGELOG.md
         additional_dependencies: [black==19.10b0]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.9
