--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,21 @@ commands =
     pre-commit install
     pre-commit run --all-files --show-diff-on-failure
 
+[testenv:docs]
+basepython = python3
+skip_install = true
+changedir = docs
+deps =
+    doc8
+    sphinx
+    lxml
+whitelist_externals = make
+commands =
+    doc8 index.rst ../README.rst --extension .rst --ignore D001
+    make html SPHINXOPTS="-W --keep-going"
+
 [pytest]
-addopts = -v --nf --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
+addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
 [flake8]
 max-line-length = 88
@@ -43,16 +56,3 @@ line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
 known_third_party = lxml,pytest,requests,setuptools
-
-[testenv:docs]
-basepython = python3
-skip_install = true
-changedir = docs
-deps =
-    doc8
-    sphinx
-    lxml
-whitelist_externals = make
-commands =
-    doc8 index.rst ../README.rst --extension .rst --ignore D001
-    make html SPHINXOPTS="-W --keep-going"
