Implemented logic to prevent rate-limiting; update dependencies and CI workflow.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ python =
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
+whitelist_externals = pytest
 commands = pytest {posargs}
 
 [testenv:lint]
