--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
     make html SPHINXOPTS="-W --keep-going"
 
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
 [flake8]
 max-line-length = 88
