Added support for DEF 14A and fixed a few bugs; reorganized tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ python =
     3.7: py37
     3.8: py38
 
+# Configure testing environments
+
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
@@ -36,24 +38,19 @@ commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
     make html SPHINXOPTS="-W --keep-going"
 
+# Configure settings for pytest, isort, and flake8
+
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
+addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
+
+[isort]
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+known_third_party = lxml,pytest,requests,setuptools
 
 [flake8]
 max-line-length = 88
 select = C,E,F,W,B,B9
 per-file-ignores = sec_edgar_downloader/__init__.py:F401
 ignore = E203,E501,W503
-exclude =
-    .git,
-    __pycache__,
-    *.pyc,
-    docs/conf.py,
-    build,
-    dist
-
-[tool:isort]
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = true
-known_third_party = lxml,pytest,requests,setuptools
