--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
 # Configure settings for pytest, isort, and flake8
 
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing
+addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
 [isort]
 line_length = 88
