--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.7
       - name: Install dependencies
         run: |
-          pip install -U pip
+          pip install -U pip setuptools wheel
           pip install tox
       - name: Linting code
         run: tox -e lint
@@ -43,7 +43,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip
+          pip install -U pip setuptools wheel
           pip install tox tox-gh-actions
       - name: Test with tox
         run: tox
@@ -67,7 +67,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip
+          pip install -U pip setuptools wheel
           pip install tox tox-gh-actions
       - name: Test with tox
         run: tox
@@ -91,7 +91,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip
+          pip install -U pip setuptools wheel
           pip install tox tox-gh-actions
       - name: Test with tox
         run: tox
