Add PyPy3 support and consolidate github actions YAML.

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
-envlist = py{36,37,38},lint,docs
+envlist = py{py3,36,37,38},lint,docs
 skip_missing_interpreters = true
 
 [gh-actions]
 python =
+    pypy3: pypy3
     3.6: py36
     3.7: py37
     3.8: py38
 
 # Configure testing environments
-
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
@@ -39,7 +39,6 @@ commands =
     make html SPHINXOPTS="-W --keep-going"
 
 # Configure settings for pytest, isort, and flake8
-
 [pytest]
 addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
