--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -24,6 +24,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - if: ${{ python-version == "pypy3" }}
+        run: pip install -U cython # lxml on PyPy requires cython
       - name: Install dependencies
         run: |
           pip install -U pip setuptools wheel
