--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["pypy3", "3.6", "3.7", "3.8", "3.9-dev"]
+        python-version: ["3.6", "3.7", "3.8", "3.9-dev"]
         os: [Ubuntu, MacOS, Windows]
     steps:
       - uses: actions/checkout@v2
@@ -24,8 +24,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - if: ${{ python-version == "pypy3" }}
-        run: pip install -U cython # lxml on PyPy requires cython
       - name: Install dependencies
         run: |
           pip install -U pip setuptools wheel
