--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py{py3,36,37,38},lint,docs
+envlist = py{36,37,38},lint,docs
 skip_missing_interpreters = true
 
 [gh-actions]
 python =
-    pypy3: pypy3
     3.6: py36
     3.7: py37
     3.8: py38
