--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,10 @@ python =
     3.7: py37
     3.8: py38
 
-# Configure testing environments
 [testenv]
 description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
-whitelist_externals = pytest
+allowlist_externals = pytest
 commands = pytest {posargs}
 
 [testenv:lint]
@@ -32,12 +31,11 @@ deps =
     doc8
     sphinx
     lxml
-whitelist_externals = make
+allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
     make html SPHINXOPTS="-W --keep-going"
 
-# Configure settings for pytest, isort, and flake8
 [pytest]
 addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
 
