--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+minversion = 3.18.0
 envlist = py{36,37,38},lint,docs
 skip_missing_interpreters = true
 
@@ -9,13 +10,11 @@ python =
     3.8: py38
 
 [testenv]
-description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
 allowlist_externals = pytest
-commands = pytest {posargs}
+commands = pytest
 
 [testenv:lint]
-description = lint files in current directory using {basepython}
 basepython = python3
 skip_install = true
 deps = pre-commit
@@ -30,7 +29,7 @@ changedir = docs
 deps =
     doc8
     sphinx
-    lxml
+    bs4
 allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
@@ -43,7 +42,6 @@ addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
-known_third_party = lxml,pytest,requests,setuptools
 
 [flake8]
 max-line-length = 88
