--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.18.0
-envlist = py{36,37,38,39},lint,docs
+envlist = py{36,37,38,39}
 skip_missing_interpreters = true
 
 [gh-actions]
