--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,12 +2,12 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.6.2
+    rev: 1.7.0
     hooks:
       - id: bandit
         args: [-lll, --quiet, --exclude=tests/**]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.3.0
+    rev: v3.4.0
     hooks:
       - id: check-case-conflict
       - id: check-docstring-first
@@ -21,7 +21,7 @@ repos:
       - id: trailing-whitespace
         exclude: ^tests/sample_filings/
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.6.4
+    rev: 5.7.0
     hooks:
       - id: isort
   - repo: https://github.com/asottile/pyupgrade
@@ -38,7 +38,7 @@ repos:
     rev: 20.8b1
     hooks:
       - id: black
-        args: [--safe, --quiet]
+        args: [--quiet, --target-version=py36]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
     hooks:
