Fixed linting and added supported filings to README.

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     doc8
     sphinx
     bs4
+    sphinx_autodoc_typehints
 allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
