Complete rewrite of package to use EDGAR Search API (#52)
* Add type annotations to existing code before rewrite.

* Solid progress toward rewrite.

* More progress toward rewrite.

* More progress toward rewrite.

* Full p39 support

* Add tests to get coverage to 100% and improve error handling.

* Update tests

* Update tests

* Added search query functionality

* Added search query functionality

* Fixed linting and added supported filings to README.

* Rate-limit API requests and add CHANGELOG and migration guide.

* Updated docs and README

* Added to CHANGELOG/migration guide; added test for URL resolution.

* Remove lstrip of 0s since search API does not allow for truncated CIKs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py{36,37,38},lint,docs
+minversion = 3.18.0
+envlist = py{36,37,38,39}
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -7,15 +8,14 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
+    3.9: py39
 
 [testenv]
-description = run the tests with pytest using {basepython}
 deps = -rrequirements.txt
 allowlist_externals = pytest
-commands = pytest {posargs}
+commands = pytest
 
 [testenv:lint]
-description = lint files in current directory using {basepython}
 basepython = python3
 skip_install = true
 deps = pre-commit
@@ -30,7 +30,8 @@ changedir = docs
 deps =
     doc8
     sphinx
-    lxml
+    bs4
+    sphinx_autodoc_typehints
 allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
@@ -43,7 +44,6 @@ addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
-known_third_party = lxml,pytest,requests,setuptools
 
 [flake8]
 max-line-length = 88
