--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ deps =
     sphinx
     sphinx_autodoc_typehints
     bs4
+    Faker
 allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
