--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      # Prevent SEC rate-limiting by limiting number of parallel runners
+      max-parallel: 4
       fail-fast: true
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
