--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -14,9 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
-      # Prevent SEC rate-limiting by limiting number of parallel runners
-      max-parallel: 4
-      fail-fast: true
+      fail-fast: false
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -49,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip setuptools wheel
-          pip install tox
+          pip install -U tox
       - name: Lint code
         run: tox -e lint
       - name: Lint docs
