Swap out requests for httpx and add retry mechanism (#74)
* Add retry mechanism-swap out requests for httpx

* set max parallel to 10

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       # Prevent SEC rate-limiting by limiting number of parallel runners
-      max-parallel: 4
+      max-parallel: 10
       fail-fast: true
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip setuptools wheel
-          pip install tox
+          pip install -U tox
       - name: Lint code
         run: tox -e lint
       - name: Lint docs
