Move back to requests module and implement backoff retry mechanism to help solve 403 errors

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
     doc8
     sphinx
     sphinx_autodoc_typehints
-    httpx
+    requests
     bs4
     Faker
 allowlist_externals = make
