--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include LICENSE CHANGELOG.md README.rst Makefile requirements.txt tox.ini
+include LICENSE CHANGELOG.md README.rst Makefile requirements-dev.txt tox.ini
 recursive-include tests *.py
 recursive-include docs *.py *.rst *.bat Makefile
