--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
     3.10: py310
 
 [testenv]
-deps = -rrequirements-dev.txt
+deps = -r requirements/requirements-tests.txt
 allowlist_externals = pytest
 commands = pytest
 
@@ -22,19 +22,13 @@ skip_install = true
 deps = pre-commit
 commands =
     pre-commit install
-    pre-commit run --all-files --show-diff-on-failure
+    pre-commit run --all-files {posargs}
 
 [testenv:docs]
 basepython = python3
 skip_install = true
 changedir = docs
-deps =
-    doc8
-    sphinx
-    sphinx_autodoc_typehints
-    requests
-    bs4
-    Faker
+deps = -r requirements/requirements-docs.txt
 allowlist_externals = make
 commands =
     doc8 index.rst ../README.rst --extension .rst --ignore D001
