--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,12 @@ commands = pytest
 [testenv:lint]
 basepython = python3
 skip_install = true
-deps = pre-commit
+deps =
+    pre-commit
+    mypy
+    types-requests
 commands =
+    mypy sec_edgar_downloader --ignore-missing-imports
     pre-commit install
     pre-commit run --all-files {posargs}
 
