Full Rewrite to use official SEC Edgar API (#122)

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,14 @@
 [tox]
 minversion = 3.18.0
-envlist = py{36,37,38,39,310}
+envlist = py{38,39,310,311}
 skip_missing_interpreters = true
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
 
 [testenv]
 deps = -r requirements/requirements-tests.txt
@@ -19,8 +18,12 @@ commands = pytest
 [testenv:lint]
 basepython = python3
 skip_install = true
-deps = pre-commit
+deps =
+    pre-commit
+    mypy
+    types-requests
 commands =
+    mypy sec_edgar_downloader --ignore-missing-imports
     pre-commit install
     pre-commit run --all-files {posargs}
 
