--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,17 @@ python =
     3.10: py310
     3.11: py311
 
+# Unit test and code coverage target
 [testenv]
 deps = -r requirements/requirements-tests.txt
 allowlist_externals = pytest
-commands = pytest
+commands = pytest -k "not test_integration" --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
+
+# Integration test and code coverage target
+[testenv:integration]
+deps = -r requirements/requirements-tests.txt
+allowlist_externals = pytest
+commands = pytest -k "test_integration"
 
 [testenv:lint]
 basepython = python3
@@ -38,7 +45,7 @@ commands =
     make html SPHINXOPTS="-W --keep-going"
 
 [pytest]
-addopts = -v --cov-branch --cov=sec_edgar_downloader --cov-fail-under=100 --cov-report=term-missing --cov-report=xml
+addopts = -v
 
 [isort]
 line_length = 88
